# javascript-runtime

./: .gitignore  Cargo.toml  LICENSE.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  tsconfig.json  turbo.json
.cargo/: config.toml
.github/workflows/: build-and-publish.yml
packages-meta/javascript-runtime-cordova-e2e/: config.xml  package-lock.json  package.json
packages-meta/javascript-runtime-cordova-e2e/native/: index.js
packages-meta/javascript-runtime-cordova-e2e/patches/: cordova-lib+12.0.1.patch
packages-meta/javascript-runtime-cordova-e2e/src/: native.js  webview.js
packages-meta/javascript-runtime-cordova-e2e/www/: index.html  index.js
packages-meta/npm-registry/: package.json  turbo.json  verdaccio.yaml
packages-meta/uniffi-bindgen/: Cargo.toml
workspace/javascript-runtime/: Cargo.toml
workspace/javascript-runtime-cordova-plugin/: package.json  plugin.xml  tsconfig.json
workspace/javascript-runtime-cordova-plugin/android/: build-extras.gradle
workspace/javascript-runtime-cordova-plugin/android/org/apache/cordova/plugins/javascript_runtime/: JavaScriptRuntimePlugin.kt
workspace/javascript-runtime-cordova-plugin/src/: mod.ts
workspace/javascript-runtime-web/: .npmignore  package.json
workspace/javascript-runtime-web/src/: javascript-runtime.ts  ops.ts  utils.ts
workspace/javascript-runtime/src/: event.rs  op_javascript_runtime.js
