[package]
name = "javascript-runtime"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "javascript_runtime"

[dependencies]
anyhow = { version = "1.0.83" }
deno_core = { version = "0.279.0" }
deno_runtime = { version = "0.158.0" }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = { version = "1.0.117" }
serde_v8 = { version = "0.188.0" }
thiserror = { version = "1.0.60" }
tokio = { version = "1.37.0" }
uniffi = { workspace = true }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
